refactor: use URI.create instead of deprecated URL constructor